terragrunt/modules/vpc/nat.tf
###########################################################
## NAT GATEWAY
###########################################################

resource "aws_nat_gateway" "nat_gateway" {
  allocation_id = aws_eip.elastic_ip.id
  subnet_id     = aws_subnet.public_subnet[0].id

  tags = {
    Name = "${var.project}-nat-${var.environment}"
  }
}
